#*******************************************************************************
# Makefile.am (m4)
#-------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	sequencer64
# \author     	Chris Ahlstrom
# \date       	2015-09-11
# \update      2015-09-11
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This module provides an Automake makefile for the sequencer64
#     library's main 'm4' directory.  This makefile provides mostly just a
#     way to make sure the m4 files are included in the 'dist' target.
#
#-------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign dist-zip dist-bzip2
MAINTAINERCLEANFILES = Makefile.in Makefile

PACKAGE = @PACKAGE@
VERSION = @VERSION@

#*******************************************************************************
# EXTRA_DIST
#-------------------------------------------------------------------------------

EXTRA_DIST = alsa.m4 \
 ax_prefix_config_h.m4 \
 ax_prog_flex.m4 \
 gcc-version.m4 \
 inttypes.m4 \
 isc-posix.m4 \
 mm-common.m4 \
 mm-warnings.m4 \
 pkg.m4 \
 threadlib.m4 \
 win32msc.m4 \
 xpc_debug.m4 \
 xpc_doxygen.m4 \
 xpc_errorlog.m4 \
 xpc_mingw32.m4 \
 xpc_nullptr.m4 \
 xpc_thisptr.m4

#******************************************************************************
# Makefile.am (m4)
#------------------------------------------------------------------------------
# 	vim: ts=3 sw=3 ft=automake
#------------------------------------------------------------------------------
