#*******************************************************************************
# Makefile.am (man)
#-------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	sequencer26
# \author     	Chris Ahlstrom
# \date       	2015-09-10
# \update      2015-09-11
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This module provides an Automake makefile for sequencer26's main 'man'
#     directory.
#
#-------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign dist-zip dist-bzip2
MAINTAINERCLEANFILES = Makefile.in Makefile

PACKAGE = @PACKAGE@
VERSION = @VERSION@

#*******************************************************************************
# EXTRA_DIST
#-------------------------------------------------------------------------------

EXTRA_DIST =

#*******************************************************************************
# dist
#-------------------------------------------------------------------------------

dist_man_MANS = sequencer26.1

#******************************************************************************
# Makefile.am (man)
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=automake
#------------------------------------------------------------------------------
